--- a/.classpath
+++ b/.classpath
@@ -1,20 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_60"/>
-	<classpathentry kind="lib" path="D:/selenium_java/poi-3.16-beta2/poi-3.16-beta2.jar"/>
-	<classpathentry kind="lib" path="D:/selenium_java/poi-3.16-beta2/poi-examples-3.16-beta2.jar"/>
-	<classpathentry kind="lib" path="D:/selenium_java/poi-3.16-beta2/poi-excelant-3.16-beta2.jar"/>
-	<classpathentry kind="lib" path="D:/selenium_java/poi-3.16-beta2/poi-ooxml-3.16-beta2.jar"/>
-	<classpathentry kind="lib" path="D:/selenium_java/poi-3.16-beta2/poi-ooxml-schemas-3.16-beta2.jar"/>
-	<classpathentry kind="lib" path="D:/selenium_java/poi-3.16-beta2/poi-scratchpad-3.16-beta2.jar"/>
-	<classpathentry kind="lib" path="D:/selenium_java/poi-3.16-beta2/ooxml-lib/curvesapi-1.04.jar"/>
-	<classpathentry kind="lib" path="D:/selenium_java/poi-3.16-beta2/ooxml-lib/xmlbeans-2.6.0.jar"/>
-	<classpathentry kind="lib" path="D:/selenium_java/poi-3.16-beta2/lib/commons-codec-1.10.jar"/>
-	<classpathentry kind="lib" path="D:/selenium_java/poi-3.16-beta2/lib/commons-collections4-4.1.jar"/>
-	<classpathentry kind="lib" path="D:/selenium_java/poi-3.16-beta2/lib/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="D:/selenium_java/poi-3.16-beta2/lib/junit-4.12.jar"/>
-	<classpathentry kind="lib" path="D:/selenium_java/poi-3.16-beta2/lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre7"/>
 	<classpathentry kind="lib" path="D:/selenium_java/selenium-2.53.1/selenium-java-2.53.1.jar"/>
 	<classpathentry kind="lib" path="D:/selenium_java/selenium-2.53.1/selenium-java-2.53.1-srcs.jar"/>
 	<classpathentry kind="lib" path="D:/selenium_java/selenium-2.53.1/libs/apache-mime4j-0.6.jar"/>
